--- a/about/index.html
+++ b/about/index.html
@@ -71,11 +71,11 @@
         <a href="#" aria-label="Menu"><i class="fas fa-bars fa-2x"></i></a>
       </li>
       <!--
-     --><li><a href="/blog/">Home</a></li><!--
+     --><li><a href="/blog/blog/">Home</a></li><!--
    --><!--
-     --><li><a href="/blog/about/">About</a></li><!--
+     --><li><a href="/blog/blog/about/">About</a></li><!--
    --><!--
-     --><li><a href="/blog/archives/">Writing</a></li><!--
+     --><li><a href="/blog/blog/archives/">Writing</a></li><!--
    --><!--
      --><li><a target="_blank" rel="noopener" href="https://github.com/epicseven-cup?tab=repositories">Projects</a></li><!--
    -->
@@ -122,11 +122,11 @@
     <nav>
       <ul>
         <!--
-       --><li><a href="/blog/">Home</a></li><!--
+       --><li><a href="/blog/blog/">Home</a></li><!--
      --><!--
-       --><li><a href="/blog/about/">About</a></li><!--
+       --><li><a href="/blog/blog/about/">About</a></li><!--
      --><!--
-       --><li><a href="/blog/archives/">Writing</a></li><!--
+       --><li><a href="/blog/blog/archives/">Writing</a></li><!--
      --><!--
        --><li><a target="_blank" rel="noopener" href="https://github.com/epicseven-cup?tab=repositories">Projects</a></li><!--
      -->
