--- a/about/index.html
+++ b/about/index.html
@@ -171,7 +171,7 @@
 
     <script type="text/javascript">
       var utterances_repo = 'epicseven-cup/blog';
-      var utterances_issue_term = '2';
+      var utterances_issue_term = 'title';
       var utterances_label = 'Comment';
       var utterances_theme = 'github-dark';
 
